setup/myapp/app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

@import "bootstrap";
body {
    background: rgb(0, 0, 0);
    background: linear-gradient(348deg, rgba(0, 0, 0, 1) 0%, rgba(43, 43, 50, 1) 100%);
}

.content {
    align-content: center;
    border-radius: 5px;
    background-color: #111;
    border: 10px 25%;
    max-width: 25cm;
}

#online-users {
    color: #DDD;
    padding: 4px;
    font-family: Raleway;
    position: relative;
    align-content: right;
    max-width: 100;
    max-height: 400px;
}

#online-users::-webkit-scrollbar {
    display: none;
}

#cnv {
    text-align: center;
    border-radius: 5px;
    background-color: #111;
    font-family: "Righteous";
    border: 10px 25%;
    border-color: black;
    padding: 50px;
}

#online-user-button {
    margin-block-end: 2px;
    width: 15em;
}

#transcendence-title {
    padding: 0.3em;
    font-family: Righteous;
    color: White;
    background-color: #111;
    transition: 2s;
}

#transcendence-title:hover {
    background-color: #000;
}

#transcendence-title a:visited {
    color: white;
}

.title {
    margin-top: 1em;
    padding: 2%;
    font-family: Righteous;
    font-size: 2em;
    color: White;
    border-radius: 15px 50px 0 0;
    background-color: #111;
}

.message {
    color: #EEE;
    text-align: left;
}

#canvas {
    max-width: 25cm;
    padding: 1%;
    text-align: center;
    background-color: darkgray;
    border-radius: 5px;
}

.sign-button {
    cursor: hand;
    background-color: rgb(39, 155, 170);
    /* Green */
    border: none;
    color: white;
    -top: 30%;
    -bottom: 30%;
    padding: 1% 5%;
    text-align: center;
    text-decoration: none;
    font-size: 18px;
    border-radius: 8px;
    transition-duration: 4ms;
}

.sign-button:hover {
    cursor: hand;
    background-color: rgb(34, 133, 146);
    /* Green */
    color: white;
}

#active-game {
    cursor: hand;
    background-color: rgb(233, 57, 44);
    /* Green */
    border: none;
    color: white;
    padding: 15px 32px;
    font-size: 18px;
    align-content: flex-end;
    border-radius: 8px;
    transition-duration: 4ms;
    /* 
    position: relative; */
}


/* #footer {
    bottom: 0;
}
 */

#active-game:hover {
    cursor: hand;
    background-color: rgb(131, 20, 20);
    /* Green */
    color: white;
}


/* ul .navbar-brand {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;
} */


/* li .nav-item{
    float: left;
} */


/* li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
} */


/* li a:hover:not(.active) {
    background-color: #111;
} */

.active {
    background-color: #4CAF50;
}

.img-avatar {
    width: 50px;
    height: 50px;
}

#user-nickname {
    color: white;
}

.scroll_list {
    width: 200px;
    height: 150px;
    overflow-y: auto;
}

